# VibeKoder

./: .gitmodules  CMakeLists.txt  README.md  appconfig.cpp  appconfig.h  commandpipemanager.cpp  commandpipemanager.h  configmanager.cpp  configmanager.h  descriptiongenerator.cpp  descriptiongenerator.h  detachedwindow.cpp  detachedwindow.h  draggabletabwidget.cpp  draggabletabwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  openai_message.cpp  openai_message.h  openai_message_model.cpp  openai_message_model.h  openai_request.cpp  openai_request.h  openaibackend.cpp  openaibackend.h  project.cpp  project.h  projectsettingsdialog.cpp  projectsettingsdialog.h  projectsettingswidget.cpp  schema.json  session.cpp  session.h  sessiontabwidget.cpp  sessiontabwidget.h  tabmanager.cpp  tabmanager.h
docs/: AIBackendRefactor.md  Founding doc overview - chatgpt4pt1 response.md  Founding doc overview.md  MakingNewProject.md  OpenAIAPIOverview.md  RegeneratingOpenAIAPISummary.txt  SeedPrompt.md  SeedPrompt.txt  StandardizeFiles.md  SyntaxHighlighting.md  TemplateLoading.md  Vision.sync-conflict-20251024-000725-P43QUPE.md  boilerplateSrc.txt  even simpler prompt.md  expliningPointersSess025.md  openai_api_summary.txt  sessionTabWidgetlogic.md  simpler prompt.md  todo.md  toml_ref.md
src/: Development.VKTemplate  SimpleQuery.VKTemplate  aibackend.cpp  aibackend.h  appconfig.cpp  appconfig.h  appconfigtypes.cpp  appconfigtypes.h  applicationsettingsdialog.cpp  applicationsettingsdialog.h  applicationsettingsdialog.h.old  commandpipemanager.cpp  configmanager.cpp  configmanager.h  detachedwindow.cpp  detachedwindow.h  files.qrc  main.cpp  mainwindow.cpp  mainwindow.h  project.cpp  project.h  projectconfig.cpp  projectconfig.h  projectsettingsdialog.cpp  projectsettingsdialog.h  projectsettingswidget.cpp  projectsettingswidget.h  projectsettingswidget_new.h  session.cpp  sessiontabwidget.cpp  sessiontabwidget.h  tabmanager.cpp
